Update security configuration to use modern Spring Security syntax
- Replaced outdated configuration methods with functional style configuration
- Disabled CSRF for stateless session
- Updated session management to use STATELESS policy
- Configured CORS with custom settings
- Added JWT token validation filter before BasicAuthenticationFilter
- Enabled HTTP basic authentication and form login (optional)

--- a/twitterBackend/pom.xml
+++ b/twitterBackend/pom.xml
@@ -94,6 +94,16 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-resource-server -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-resource-server</artifactId>
+			<version>6.4.1</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
